force-app/main/default/objects/OpportunityLineItem/fields/CONGA_Hipoteca__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Hipoteca__c</fullName>
    <formula>UnitPrice*Opportunity.Pago_Escritura__c/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Hipoteca</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>