force-app/main/default/objects/OpportunityLineItem/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <formula>CASESAFEID(PricebookEntry.Product2Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductID</label>
    <type>Text</type>
</CustomField>