force-app/main/default/objects/OpportunityLineItem/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <formula>PricebookEntry.Product2.Promocion__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoción</label>
    <type>Text</type>
</CustomField>